--- a/headwear.html
+++ b/headwear.html
@@ -137,12 +137,12 @@
 		</div>
 		<div class="filter-color">
 			Color
-			<button class="color-swatch swatch1"></button>
-			<button class="color-swatch swatch2"></button>
-			<button class="color-swatch swatch3"></button>
-			<button class="color-swatch swatch4"></button>
-			<button class="color-swatch swatch5"></button>
-			<button class="color-swatch swatch6"></button>
+			<button class="color-swatch swatch1 pickColor" href='#pickCream'></button>
+			<button class="color-swatch swatch2 pickColor" href='#pickBlue'></button>
+			<button class="color-swatch swatch3 pickColor" href='#pickRed'></button>
+			<button class="color-swatch swatch4 pickColor" href='#pickGreen'></button>
+			<button class="color-swatch swatch5 pickColor" href='#pickBlack'></button>
+			<button class="color-swatch swatch6 pickColor" href='#pickWhite'></button>
 		</div>
 		<div>
 			<button class="format-toggle-product switchFilters" href='#byProduct'>Shop By Product</button>
@@ -156,7 +156,7 @@
 <!--End Filter Toggle-->
 <!--Filter Area 1-->
 	<div class="filter-area" id="byProduct">
-		<div class="filter-area-vertical-scroller">
+		<div class="filter-area-vertical-scroller" id="pickBlack">
 			<div class="vertical-scroll">
 				<!--Row 1-->
 					<div class="card">
@@ -450,6 +450,299 @@
 					</div>
 				</div>
 			</div>
+	<!--End Black Hat Scroller-->
+	<!--Begin Cream Hat Scroller-->
+	<div class="filter-area-vertical-scroller" id="pickCream">
+			<div class="vertical-scroll">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4073-KH-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Hat Name
+							<div class="card-price">
+								$20
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4065-O.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+			</div>
+	</div>
+	<!--End Cream Hat Scroller-->
+	<!--Begin Blue Hat Scroller-->
+		<div class="filter-area-vertical-scroller" id="pickBlue">
+			<div class="vertical-scroll">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4025-BLW-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Hat Name
+							<div class="card-price">
+								$20
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4046-NY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 2-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4048-NY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Tight Loose
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4068-NY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Mountain
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 3-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4073-NY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4074-BL-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 4-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4078-NY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4079-NY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	<!--End Blue Hat Scroller-->
+	<!--Begin Red Hat Scroller-->
+	<div class="filter-area-vertical-scroller" id="pickRed">
+			<div class="vertical-scroll">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4019-M-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Hat Name
+							<div class="card-price">
+								$20
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4062-M-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+			</div>
+	</div>
+	<!--End Red Hat Scroller-->
+	<!--Begin Green Hat Scroller-->
+	<div class="filter-area-vertical-scroller" id="pickGreen">
+			<div class="vertical-scroll">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4025-GRW-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Hat Name
+							<div class="card-price">
+								$20
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4037-GR-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 2-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4051-GR-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Tight Loose
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4063-GR-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Mountain
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 3-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4076-TQ-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	<!--End Green Hat Scroller-->
+	<!--Begin Green Hat Scroller-->
+	<div class="filter-area-vertical-scroller" id="pickWhite">
+			<div class="vertical-scroll">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4019-HGY-Front.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Hat Name
+							<div class="card-price">
+								$20
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	<!--End White Hat Scroller-->
 	<!--Filter Preview-->
 		<div class="filter-preview">
 			<div class="preview-information">
