--- a/index.html
+++ b/index.html
@@ -296,17 +296,16 @@
 				<img src="assets/images/info.png" alt="Info" id="main-preview">
 				<button class="right-arrow"><i class="material-icons preview-arrow">arrow_forward</i></button>
 			<div class="preview-footer">
-				<div class="color-holder">
-					<button class="preview-color black"></button>
-					<button class="preview-color green"></button>
+				<div class="color-holder cH-home">
+					<button class="preview-color black size"></button>
+					<button class="preview-color red size"></button>
+					<button class="preview-color blue size"></button>
+					<button class="preview-color pink size"></button>
+					<button class="preview-color green size"></button>
+					<button class="preview-color grey size"></button>
 				</div>
-					<div class="preview-quantity">Quantity</div>
-				<div class="quantity-holder">
-					<button class="preview-remove"><i class="material-icons preview-remove">remove</i></button>
-					<input type="text" name="quantity" value="1" class="quantity">
-					<button class="preview-remove"><i class="material-icons preview-remove">add</i></button>
-				</div>
-					<button class="done">Done!</button>
+				<button class="footer-shop">Shop Drinkwear<i class="material-icons footer-arrow">&#xe5c8;</i></button>
+				<button class="footer-cart">Add to Cart<i class="material-icons footer-add">add</i></button>
 			</div>
 		</div>	
 	</div>
